--- a/eskm.html
+++ b/eskm.html
@@ -11,9 +11,11 @@
     start
     :Start;
     if (Lupa Password?) then (Ya)
-        :Buka halaman Lupa Password;
+        :Buka halaman Reset Password;
+        :Masukkan email;
+        :Reset password melalui email;
     else (Tidak)
-        :Buka Halaman Login;
+        :Buka halaman Login;
         :Masukkan Username dan Password;
         if (Decision?) then (Yes)
             :Do something;
