--- a/eskm.html
+++ b/eskm.html
@@ -31,6 +31,17 @@
                     H1 -->|Tidak| J{Jenis User}
                     J -->|Operator| K{Menu Operator}
                     J -->|Pengguna| L{Menu Pengguna}
+                    K --> K1[Manajemen Pengguna]
+                    K --> K2[Manajemen Pengaduan]
+                    K --> K3[Manajemen Komisioner]
+                    K --> K4[Manajemen Jadwal Komisioner]
+                    K --> K5[Manajemen Jadwal Komisioner]
+                    K1 --> H
+                    K2 --> H
+                    K3 --> H
+                    K4 --> H
+                    K5 --> H
+                    
                     
             `;
 
