--- a/eskm.html
+++ b/eskm.html
@@ -36,7 +36,7 @@
                     K --> K3[Manajemen\nKomisioner]
                     K --> K4[Manajemen\nJadwal Komisioner]
                     K --> K5[Manajemen\nJadwal Komisioner]
-                    K1 --> M{}
+                    K1 --> M{Selesai}
                     K2 --> M
                     K3 --> M
                     K4 --> M
