--- a/eskm.html
+++ b/eskm.html
@@ -36,6 +36,9 @@
                     K --> K3[Manajemen\nKomisioner]
                     K --> K4[Manajemen\nJadwal Komisioner]
                     K --> K5[Manajemen\nJadwal Komisioner]
+                    L --> L1[Memperbarui\nProfil]
+                    L --> L2[Membuat\nPengaduan]
+                    L --> L3[Memperbarui\nPengaduan]
                     K1 --> M{Selesai}
                     K2 --> K2A{Menu\nPengaduan}
                     K2A -->|| K2A1[Daftar]
