--- a/eskm.html
+++ b/eskm.html
@@ -41,9 +41,9 @@
                     L --> L3[Memperbarui\nPengaduan]
                     K1 --> M{Selesai}
                     K2 --> K2A{Menu\nPengaduan}
-                    K2A -->|| K2A1[Daftar]
-                    K2A -->|| K2A2[Verifikasi]
-                    K2A -->|| K2A3[Pengaduan\nOffline]
+                    K2A --> K2A1[Daftar]
+                    K2A --> K2A2[Verifikasi]
+                    K2A --> K2A3[Pengaduan\nOffline]
                     K2A1 --> M
                     K2A2 --> M
                     K2A3 --> M
