--- a/eskm.html
+++ b/eskm.html
@@ -41,8 +41,8 @@
                     L --> L3[Memperbarui\nPengaduan]
                     K1 --> M{Selesai}
                     K2 --> K2A{Menu\nPengaduan}
-                    K2A --> K2A1[Daftar]
-                    K2A --> K2A2[Verifikasi]
+                    K2A --> K2A1[Daftar\nPengaduan]
+                    K2A --> K2A2[Verifikasi\nPengaduan]
                     K2A --> K2A3[Pengaduan\nOffline]
                     K2A1 --> M
                     K2A2 --> M
@@ -50,6 +50,9 @@
                     K3 --> M
                     K4 --> M
                     K5 --> M
+                    L1 --> M
+                    L2 --> M
+                    L3 --> M
                     M --> H
 
                     class K,L menuClass;
