--- a/eskm.html
+++ b/eskm.html
@@ -9,7 +9,8 @@
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         
         mermaid.initialize({
-            startOnLoad: true
+            startOnLoad: true,
+            theme: 'forest',
         });
 
         document.addEventListener('DOMContentLoaded', function() {
