--- a/eskm.html
+++ b/eskm.html
@@ -70,7 +70,7 @@
 </head>
 <body>
 
-    <h2>Flowchart Using Mermaid</h2>
+    <h2>Flowchart ESKM</h2>
 
     <!-- The Mermaid code will be dynamically injected here -->
     <div id="mermaid-container"></div>
