--- a/eskm.html
+++ b/eskm.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowchart ESKM</title>
+    <style>
+        .mermaid .node rect {
+            min-width: 250px;  /* Set fixed width */
+            min-height: 100px;  /* Set fixed height */
+        }
+    </style>    
     <!-- Include the Mermaid.js library -->
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
