--- a/eskm.html
+++ b/eskm.html
@@ -6,8 +6,8 @@
     <title>Flowchart ESKM</title>
     <style>
         .mermaid .node rect {
-            min-width: 250px;  /* Set fixed width */
-            min-height: 100px;  /* Set fixed height */
+            width: 250px;  /* Set fixed width */
+            height: 100px;  /* Set fixed height */
         }
     </style>    
     <!-- Include the Mermaid.js library -->
