--- a/eskm.html
+++ b/eskm.html
@@ -6,8 +6,7 @@
     <title>Flowchart ESKM</title>
     <style>
         .mermaid .node rect {
-            width: 250px;  /* Set fixed width */
-            height: 100px;  /* Set fixed height */
+            padding: 50px;
         }
     </style>    
     <!-- Include the Mermaid.js library -->
