--- a/eoffice.html
+++ b/eoffice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowchart ESKM</title>
+    <title>Flowchart E-Office</title>
     <style>
         .mermaid .node rect {
             padding: 50px;
@@ -59,7 +59,7 @@
 </head>
 <body>
 
-    <h2>Flowchart ESKM</h2>
+    <h2>Flowchart E-Office</h2>
 
     <!-- The Mermaid code will be dynamically injected here -->
     <div id="mermaid-container"></div>
