--- a/eoffice.html
+++ b/eoffice.html
@@ -37,8 +37,8 @@
                     H1 -->|Tidak| J{Menu}
                     J --> J1[Membuat\nTemplate]
                     J --> J2[Membuat\nDokumen]
-                    J --> J3[Disposisi]
-                    J --> J4[Nota\nDinas]
+                    J --> J3[Membuat\nDisposisi]
+                    J --> J4[Membuat\nNota Dinas]
                     J --> J5[Manajemen\nJabatan]
                     J1 --> K[Selesai]
                     J2 --> K
